<resources>
    <string name="app_name">Social Media</string>
    <string name="profile">profile</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="settings">settings</string>
    <string name="example_post_text">today is a good day to make a post in this social network, this is actually just an example text I write to have some lines of text</string>
    <string name="example_post_username">13yadav</string>
    <string name="search_hint">search...</string>
    <string name="posts">posts</string>
    <string name="logout">logout</string>
    <string name="email">e-mail</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="no_account_register">register a new account</string>
    <string name="login_with_existing_account">login with an existing account</string>
    <string name="register">register</string>
    <string name="repeat_password">repeat password</string>
    <string name="success_registration">successfully registered account</string>
    <string name="error_password_too_short">the password must be at least %d digits long</string>
    <string name="error_username_too_short">the username can\'t have less than %d characters</string>
    <string name="error_username_too_long">the username can\'t have more than %d characters</string>
    <string name="error_not_a_valid_email">please enter a valid e-mail</string>
    <string name="error_input_empty">the fields must not be empty</string>
    <string name="error_incorrectly_repeated_password">the passwords do not match</string>
    <string name="error_invalid_credentials">the e-mail or password is incorrect</string>
    <string name="error_unknown">an unknown error occurred</string>
    <string name="choose_image">choose image</string>
    <string name="enter_post_text">enter post text...</string>
    <string name="post">post</string>
    <string name="error_invalid_file">the chosen image is invalid</string>
    <string name="username">username</string>
    <string name="no_description">404 bio not found</string>
    <string name="description">bio</string>
    <string name="update_profile">update profile</string>
    <string name="edit_your_profile">edit your profile</string>
    <string name="profile_updated">profile updated</string>
    <string name="no_changes_detected">you didn\'t change anything</string>
    <string name="delete_post_dialog_title">do you want to delete that post?</string>
    <string name="delete_post_dialog_message">this action cannot be undone.</string>
    <string name="delete_post_dialog_positive">yes</string>
    <string name="delete_post_dialog_negative">no</string>
    <string name="unfollow">unfollow</string>
    <string name="follow">follow</string>
    <string name="liked_by_dialog_title">liked by</string>
    <string name="error_no_image_chosen">please choose an image for the post</string>
    <string name="enter_comment">enter comment</string>
    <string name="comments">comments</string>
    <string name="add_post">add post</string>
    <string name="chats">chats</string>
    <string name="edit_profile">edit profile</string>
    <string name="message">message</string>
    <string name="no_posts">no posts to show</string>
    <string name="no_posts_profile">no posts</string>
    <string name="discard">discard</string>
    <string name="comment">comment</string>
    <string name="following">following</string>
    <string name="follow_someone">follow someone</string>
    <string name="type_here">type here...</string>
    <string name="send">send</string>
</resources>