<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/secondaryText"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSetPostImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_image"
        android:textAllCaps="false"
        android:textFontWeight="600"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/ivPostImage"
        app:layout_constraintEnd_toEndOf="@id/ivPostImage"
        app:layout_constraintStart_toStartOf="@id/ivPostImage"
        app:layout_constraintTop_toTopOf="@id/ivPostImage" />

    <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPostText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPostImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPostDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_post_text"
            android:inputType="textMultiLine"
            android:maxLength="200"
            android:maxLines="5"
            android:nextFocusLeft="@id/etPostDescription"
            android:nextFocusUp="@id/etPostDescription" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/createPostProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPostText"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDiscard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="discard"
        android:textAllCaps="false"
        android:textFontWeight="600"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btnPost"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPostText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/post"
        android:textAllCaps="false"
        android:textFontWeight="600"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDiscard"
        app:layout_constraintTop_toBottomOf="@+id/tilPostText" />

</androidx.constraintlayout.widget.ConstraintLayout>