<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/clProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/CornerSize50Percent"
                tools:src="@drawable/img_logo" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="13yadav" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvProfileDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:maxLines="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
                app:layout_constraintTop_toBottomOf="@+id/tvUsername"
                tools:text="live life like king" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_edit_profile"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/edit_profile"
                android:textAllCaps="false"
                app:fontFamily="@font/nunito_semibold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
                app:layout_constraintTop_toBottomOf="@+id/tvProfileDescription" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnToggleFollow"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/unfollow"
                android:textAllCaps="false"
                app:fontFamily="@font/nunito_semibold"
                app:layout_constraintEnd_toStartOf="@+id/btnMessage"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivProfileImage" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMessage"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/message"
                android:textAllCaps="false"
                app:fontFamily="@font/nunito_semibold"
                app:layout_constraintBottom_toBottomOf="@+id/btnToggleFollow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnToggleFollow"
                app:layout_constraintTop_toTopOf="@+id/btnToggleFollow" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvYourPosts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/posts"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnToggleFollow" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@color/secondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvYourPosts" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPosts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="30dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                tools:itemCount="1"
                tools:listitem="@layout/list_item_post" />

            <TextView
                android:id="@+id/tvError"
                style="@style/TextStyleSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:gravity="center"
                android:text="@string/no_posts_profile"
                android:textSize="20sp"
                android:visibility="gone"
                app:drawableTint="@color/secondaryText"
                app:drawableTopCompat="@drawable/ic_embarrassed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view2" />

            <ProgressBar
                android:id="@+id/profilePostsProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvPosts"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/followingCount"
                style="@style/TextStyleBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:padding="10sp"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvYourPosts"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvYourPosts"
                tools:text="10" />

            <TextView
                android:id="@+id/following_label"
                style="@style/TextStyleSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:paddingVertical="10dp"
                android:text="@string/following"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/followingCount"
                app:layout_constraintEnd_toStartOf="@+id/followingCount"
                app:layout_constraintTop_toTopOf="@+id/followingCount" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>